<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodels.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ShoeListFragment">

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.newShoeName}"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <TextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/company_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@={viewModel.newCompanyName}"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/size_text"
            app:layout_constraintStart_toStartOf="@+id/company_text"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/size_edit"
            app:layout_constraintStart_toStartOf="@+id/company_edit"
            app:layout_constraintTop_toBottomOf="@+id/company_edit" />

        <EditText
            android:id="@+id/size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@={viewModel.newShoeSize}"
            android:ems="10"
            android:hint="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="@+id/size_text"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/description_edit"
            app:layout_constraintStart_toStartOf="@+id/size_edit"
            app:layout_constraintTop_toBottomOf="@+id/size_edit" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:text="@={viewModel.newShoeDescription}"
            android:hint="@string/description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="@+id/description_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/description_edit"
            app:layout_constraintStart_toStartOf="@+id/description_edit"
            app:layout_constraintTop_toBottomOf="@+id/description_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>